Update zh-CN.json, add "issues"

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -124,7 +124,7 @@
     "pull requests": "拉取请求",
     "marketplace": "应用商城",
     "explore": "探索",
-    "issues": "问题",
+    "issues": "议题",
     "overview": "概况",
     "repositories": "仓库",
     "projects": "项目",
@@ -223,6 +223,21 @@
     "use https": "使用HTTPS",
     "open with github desktop": "用GitHub桌面客户端打开",
     "download zip": "下载Zip压缩包",
+    "this repository": "该仓库",
+
+    "__comments-issue": "Repository Issue",
+    "new issue": "新议题",
+    "open all": "打开全部",
+    "author": "作者",
+    "labels": "标签",
+    "label": "标签",
+    "milestones": "里程碑",
+    "sort": "排序",
+    "assignee": "受理人",
+    "filter by who’s assigned": "按受理人筛选",
+    "assignees": "受理人",
+    "confirmed": "已确认",
+    "we couldn’t find anything!": "这里空空如也！",
 
     "__comments-10": "Repository settings",
     "danger zone": "危险区",
