--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -177,6 +177,7 @@
     "languages": "语言",
     "about": "关于",
     "code": "代码",
+    "dependencies": "依赖",
     "explore repositories": "探索仓库",
     "create repository": "新建仓库",
     "owner": "拥有者",
@@ -197,6 +198,8 @@
     "actions": "操作",
     "releases": "发行版",
     "add file": "添加文件",
+    "create new file": "新建文件",
+    "upload files": "上传文件",
     "readme": "自述文件",
     "commits": "次提交",
     "merge pull request": "合并拉取请求",
@@ -215,15 +218,22 @@
     "topics": "话题",
     "(separate with spaces)": "（空格分隔）",
     "include in the home page": "包含在主页中",
+    "clone": "克隆",
     "clone with https": "HTTPS方式克隆",
     "clone with ssh": "使用SSH方式克隆",
     "use git or checkout with svn using the web url.": "使用Git或SVN通过该网址检出。",
-    "use a password protected ssh key.": "使用受密码保护的SSH密钥。",
+    "use a password-protected ssh key.": "使用受密码保护的SSH密钥。",
     "use ssh": "使用SSH",
     "use https": "使用HTTPS",
     "open with github desktop": "用GitHub桌面客户端打开",
     "download zip": "下载Zip压缩包",
     "this repository": "该仓库",
+
+    "__comments-compare": "Comparing changes",
+    "comparing changes": "差异比对",
+    "compare": "对比",
+    "choose two branches to see what’s changed or to start a new pull request. if you need to, you can also": "选择两个分支以比较差异或启动新的拉取请求。如果需要，你也可以",
+    "compare across forks": "跨复刻比较",
 
     "__comments-issue": "Repository Issue",
     "new issue": "新议题",
