--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -279,7 +279,9 @@
     "personal settings": "个人设置",
     "profile": "个人资料",
     "account": "账号",
+    "appearance": "外观",
     "account security": "账号安全",
+    "billing & plans": "计费和计划",
     "security log": "安全日志",
     "security & analysis": "安全 & 分析",
     "emails": "电子邮箱",
@@ -299,6 +301,9 @@
     "name": "名字",
     "public email": "公开邮箱",
     "bio": "个人简介",
+    "twitter username": "Twitter用户名",
+    "company": "公司",
+    "location": "位置",
 
     "__comments-12": "Create a Repository",
     "a repository contains all project files, including the revision history. already have a project repository elsewhere?": "仓库包含项目中的所有文件，包括修订历史记录。在其他地方已有仓库？",
