设置界面添加单词

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -288,6 +288,7 @@
     "billing": "账单",
     "ssh and gpg keys": "SSH与GPG公钥",
     "blocked users": "黑名单",
+    "Interaction limits": "交互限制",
     "saved replies": "保存的回复",
     "applications": "应用",
     "developer settings": "开发者设置",
@@ -304,6 +305,12 @@
     "twitter username": "Twitter用户名",
     "company": "公司",
     "location": "位置",
+    "Profile picture": "个人头像",
+    "Profile settings": "配置文件设置",
+    "Display PRO badge": "显示Pro徽章",
+    "Contributions": "贡献",
+    "GitHub Developer Program": "GitHub 开发人员计划",
+    "Trending settings": "趋势设置",
 
     "__comments-12": "Create a Repository",
     "a repository contains all project files, including the revision history. already have a project repository elsewhere?": "仓库包含项目中的所有文件，包括修订历史记录。在其他地方已有仓库？",
