更加人性化的修改

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -114,10 +114,10 @@
     "new organization": "新建组织",
     "new project": "新建项目",
     "your profile": "个人资料",
-    "your repositories": "你的仓库",
-    "your projects": "你的项目",
-    "your stars": "你关注的仓库",
-    "your gists": "你的gist",
+    "your repositories": "我的仓库",
+    "your projects": "我的项目",
+    "your stars": "我关注的仓库",
+    "your gists": "我的gist",
     "upgrade": "升级",
     "feature preview": "功能预览",
     "sign out": "退出",
@@ -305,12 +305,12 @@
     "twitter username": "Twitter用户名",
     "company": "公司",
     "location": "位置",
-    "Profile picture": "个人头像",
-    "Profile settings": "配置文件设置",
-    "Display PRO badge": "显示Pro徽章",
-    "Contributions": "贡献",
-    "GitHub Developer Program": "GitHub 开发人员计划",
-    "Trending settings": "趋势设置",
+    "profile picture": "个人头像",
+    "profile settings": "配置文件设置",
+    "display pro badge": "显示Pro徽章",
+    "contributions": "贡献",
+    "github developer program": "GitHub 开发人员计划",
+    "trending settings": "趋势设置",
 
     "__comments-12": "Create a Repository",
     "a repository contains all project files, including the revision history. already have a project repository elsewhere?": "仓库包含项目中的所有文件，包括修订历史记录。在其他地方已有仓库？",
