设置 账号界面按钮翻译

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -315,11 +315,19 @@
     "preferred spoken language": "首选语言",
 
     "change username": "更改用户名",
+    "changing your username can have unintended side effects": "更改用户名可能会产生副作用",
     "export account data": "导出帐户数据",
+    "start export": "开始导出",
     "successor settings": "设置继任者",
+    "add successor": "添加的继任者",
     "search by username, full name, or email address": "搜索用户名、全名、或邮件地址",
     "you have not designated a successor": "你还没有指定继承人",
     "delete account": "删除账户",
+    "once you delete your account": "一旦你删除了账号",
+    "there is no going back": "就没回头路",
+    "please be certain": "请谨慎决定！",
+    "delete your account": "删除帐户",
+
 
     "__comments-12": "Create a Repository",
     "a repository contains all project files, including the revision history. already have a project repository elsewhere?": "仓库包含项目中的所有文件，包括修订历史记录。在其他地方已有仓库？",
