词典: 修改/添加 Gist 相关

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -110,14 +110,14 @@
     "set status": "状态设置",
     "new repository": "新建仓库",
     "import repository": "导入仓库",
-    "new gist": "新建gist(代码片段)",
+    "new gist": "新建代码片段",
     "new organization": "新建组织",
     "new project": "新建项目",
     "your profile": "个人资料",
     "your repositories": "我的仓库",
     "your projects": "我的项目",
     "your stars": "我关注的仓库",
-    "your gists": "我的gist",
+    "your gists": "我的代码片段",
     "upgrade": "升级",
     "feature preview": "功能预览",
     "sign out": "退出",
@@ -353,6 +353,66 @@
     "great repository names are short and memorable. need inspiration? how about": "好的仓库名称应该简单且容易记忆。需要灵感吗？这个怎么样：",
     "anyone on the internet can see this repository. you choose who can commit.": "任何人都可以看到这个仓库，您可以选择谁能提交。",
     "you choose who can see and commit to this repository.": "您可以选择谁可以看和提交到该仓库。",
+    
+    "__comments-13": "All Gist",
+    "starred gists": "我收藏的代码片段",
+    "search…": "搜索代码片段…",
+    "back to github": "返回到 GitHub",
+    "all gists": "所有片段",
+    "forked": "派生",
+    "starred": "收藏",
+    "you don't have any starred gists yet.": "您还没有赞过任何片段。",
+    "your github profile": "我的 GitHub 个人资料",
+    "view github profile": "查看 GitHub 个人资料",
+    "last active": "最后活动于",
+    "view": "查看",
+
+    "view your gists": "查看您的所有片段",
+    "Instantly share code, notes, and snippets.": "即时分享您的代码，笔记，片段，以及灵感。",
+    "gist description…": "片段描述",
+    "filename including extension…": "文件名 (包括扩展名)",
+    "create secret gist": "创建私密片段",
+    "secret gists are hidden by search engines but visible to anyone you give the url to.": "私密片段对搜索引擎不可见，对直接访问您分享的 url 可见。",
+    "create public gist": "创建公共片段",
+    "public gists are visible to everyone.": "公开片段对所有人可见。",
+
+    "sort:": "排序:",
+    "sort options": "排序选项",
+    "recently created": "最近创建的",
+    "least recently created": "最早创建的",
+    "recently updated": "最近更新的",
+    "least recently updated": "最早更新的",
+    "filter options": "筛选选项",
+    "secret": "私密",
+
+    "newer": "新的",
+    "older": "旧的",
+
+    "edit": "编辑",
+    "delete": "删除",
+    "revisions": "修订",
+    "stars": "收藏",
+    "forks": "派生",
+    "raw": "源码",
+    "revised": "修订",
+    "created": "创建",
+    "this gist": "该片段于",
+
+    "what would you like to do?": "您想做什么？",
+    "embed": "嵌入",
+    "embed this gist in your website.": "嵌入到您的网页中。",
+    "share": "分享",
+    "copy sharable link for this gist.": "复制片段共享链接。",
+    "clone with git or checkout with svn using the repository’s web address.": "Git 克隆或 SVN 检出该仓库所使用的 web 地址。",
+    "clone with an ssh key and passphrase from your github settings.": "使用 SSH 密钥克隆",
+    "learn more about clone urls": "更多的克隆方法",
+    
+    "editing": "编辑",
+    "make secret": "转为私密",
+    "make public": "转为公开",
+    "update public gist": "更新公开片段",
+    "update secret gist": "更新私密片段",
+
     "__dict-end": "end"
   }
 }
