词典: 增补 Github 设置

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -267,9 +267,9 @@
     "integrations": "集成",
     "installed github apps": "安装GitHub应用",
 
-    "__comments-11": "Repository settings",
+    "__comments-11": "Github settings",
     "settings": "设置",
-    "personal settings": "个人设置",
+    "account settings": "账户设置",
     "profile": "个人资料",
     "account": "账号",
     "appearance": "外观",
@@ -280,11 +280,12 @@
     "emails": "电子邮箱",
     "billing": "账单",
     "ssh and gpg keys": "SSH与GPG公钥",
-    "blocked users": "黑名单",
-    "Interaction limits": "交互限制",
     "saved replies": "保存的回复",
     "applications": "应用",
     "developer settings": "开发者设置",
+    "moderation settings": "审查设置",
+    "blocked users": "黑名单",
+    "interaction limits": "互动限制",
     "rename": "重命名",
     "options": "选项",
     "branch": "分支",
