词典: 增补双重验证相关

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -329,9 +329,24 @@
     "change password": "更改密码",
     "old password": "旧密码",
     "new password": "新密码",
+    "update password": "更新密码",
     "confirm new password": "确认新密码",
     "two-factor authentication": "双重身份验证",
+    "enable": "启用",
+    "enabled": "启用",
+    "disable": "停用",
+    "add": "添加",
+    "two-factor methods": "双重验证方式",
+    "authenticator app": "身份验证器应用",
+    "security keys": "安全密钥",
+    "sms number": "手机号码",
+    "recovery options": "恢复选项",
+    "recovery codes": "恢复码",
+    "show": "显示",
+    "fallback sms number": "备选手机号码",
+    "recovery tokens": "恢复令牌",
     "sessions": "会话",
+    "see more": "查看更多",
 
     "__comments-12": "Create a Repository",
     "a repository contains all project files, including the revision history. already have a project repository elsewhere?": "仓库包含项目中的所有文件，包括修订历史记录。在其他地方已有仓库？",
