词典: 重新翻译 'fork' 和 'star'
- 'fork' -> 派生
- 'star' -> 收藏

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -109,7 +109,7 @@
     "your profile": "个人资料",
     "your repositories": "我的仓库",
     "your projects": "我的项目",
-    "your stars": "我关注的仓库",
+    "your stars": "我收藏的仓库",
     "your gists": "我的代码片段",
     "upgrade": "升级",
     "feature preview": "功能预览",
@@ -160,12 +160,12 @@
     "organizations": "组织",
 
     "__comments-9": "Repository",
-    "star": "星标",
-    "unstar": "取消星标",
+    "star": "收藏",
+    "unstar": "取消收藏",
     "watch": "关注",
     "unwatch": "取消关注",
-    "fork": "复刻",
-    "unfork": "取消复刻",
+    "fork": "派生",
+    "unfork": "取消派生",
     "new": "新建",
     "languages": "语言",
     "about": "关于",
@@ -226,7 +226,7 @@
     "comparing changes": "差异比对",
     "compare": "对比",
     "choose two branches to see what’s changed or to start a new pull request. if you need to, you can also": "选择两个分支以比较差异或启动新的拉取请求。如果需要，你也可以",
-    "compare across forks": "跨复刻比较",
+    "compare across forks": "跨派生比较",
 
     "__comments-issue": "Repository Issue",
     "new issue": "新议题",
@@ -370,7 +370,7 @@
     "all gists": "所有片段",
     "forked": "派生",
     "starred": "收藏",
-    "you don't have any starred gists yet.": "您还没有赞过任何片段。",
+    "you don't have any starred gists yet.": "您还没有收藏任何片段。",
     "your github profile": "我的 GitHub 个人资料",
     "view github profile": "查看 GitHub 个人资料",
     "last active": "最后活动于",
