词典: 增补差异对比和拉取请求

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -225,10 +225,21 @@
     "forked from": "派生自",
 
     "__comments-compare": "Comparing changes",
-    "comparing changes": "差异比对",
+    "pull request": "拉取请求",
     "compare": "对比",
+    "comparing changes": "差异比对",
     "choose two branches to see what’s changed or to start a new pull request. if you need to, you can also": "选择两个分支以比较差异或启动新的拉取请求。如果需要，你也可以",
     "compare across forks": "跨派生比较",
+    "create pull request": "创建拉取请求",
+    "comments": "评论",
+    "files changed": "个文件已更改",
+    "allow edits by maintainers": "允许维护者进行编辑",
+    "open a pull request": "打开一个拉取请求",
+    "create a new pull request by comparing changes across two branches. if you need to, you can also": "通过比较两个分支之间的更改来创建新的拉取请求。如果需要，你也可以",
+    "able to merge.": "可以合并。",
+    "these branches can be automatically merged.": "这些分支可以自动合并。",
+    "checking mergeability…": "检查可合并性…",
+    "can’t automatically merge.": "无法自动合并。",
 
     "__comments-issue": "Repository Issue",
     "new issue": "新议题",
@@ -244,6 +255,8 @@
     "assignees": "受理人",
     "confirmed": "已确认",
     "we couldn’t find anything!": "这里空空如也！",
+    "linked pull requests": "链接的拉取请求",
+    "new pull request": "创建拉取请求",
 
     "__comments-10": "Repository settings",
     "danger zone": "危险区",
