--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -256,6 +256,7 @@
     "confirmed": "已确认",
     "we couldn’t find anything!": "这里空空如也！",
     "linked pull requests": "链接的拉取请求",
+    "submit new issue": "提交新议题",
     "new pull request": "创建拉取请求",
 
     "__comments-10": "Repository settings",
