词典: 添加高级搜索

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -528,7 +528,54 @@
     "ignoring": "忽略",
     "ignore": "忽略",
     "stop ignoring": "取消忽略",
-    
+
+    "__comments-advanced-search": "Advanced search",
+    "advanced search": "高级搜索",
+    "search": "搜索",
+    "advanced options": "高级选项",
+    "from these owners": "来自那些所有者",
+    "in these repositories": "来自那些仓库",
+    "created on the dates": "创建于何时",
+    "written in this language": "用何种语言编写",
+    "any language": "任意语言",
+    "popular": "流行",
+    "repositories options": "仓库选项",
+    "with this many stars": "有多少人收藏",
+    "with this many forks": "有多少派生",
+    "of this size": "仓库大小",
+    "pushed to": "推送于何时",
+    "with this license": "用何种许可证",
+    "any license": "任意许可证",
+    "return repositories": "",
+    "including forks.": "",
+    "not": "",
+    "and": "",
+    "only": "",
+    "code options": "代码选项",
+    "with this extension": "文件后缀名",
+    "of this file size": "文件大小",
+    "in this path": "文件路径",
+    "with this file name": "文件名称",
+    "return code": "",
+    "issues options": "议题选项",
+    "in the state": "状态",
+    "open/closed": "打开/关闭",
+    "open": "打开",
+    "closed": "关闭",
+    "with this many comments": "有多少评论",
+    "with the labels": "带有那些标签",
+    "opened by the author": "由那些作者打开",
+    "mentioning the users": "提及那些用户",
+    "assigned to the users": "分配给那些用户",
+    "updated before the date": "更新于何时",
+    "users options": "用户选项",
+    "with this full name": "全名",
+    "from this location": "位置",
+    "with this many followers": "有多少粉丝",
+    "with this many public repositories": "有多少公共仓库",
+    "working in this language": "工作于何种语言",
+    "wiki options": "WiKi 选项",
+
     "__dict-end": "end"
   }
 }
