词典: 零星增补

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -224,7 +224,7 @@
     "this repository": "该仓库",
     "forked from": "派生自",
 
-    "__comments-compare": "Comparing changes",
+    "__comments-pull-request": "Repository pull request",
     "pull request": "拉取请求",
     "compare": "对比",
     "comparing changes": "差异比对",
@@ -240,6 +240,11 @@
     "these branches can be automatically merged.": "这些分支可以自动合并。",
     "checking mergeability…": "检查可合并性…",
     "can’t automatically merge.": "无法自动合并。",
+    "reviewers": "审核人",
+    "linked issues": "关联议题",
+    "participant": "参与者",
+    "participants": "参与者",
+    "close pull request": "关闭拉取请求",
 
     "__comments-issue": "Repository Issue",
     "new issue": "新议题",
@@ -255,7 +260,7 @@
     "assignees": "受理人",
     "confirmed": "已确认",
     "we couldn’t find anything!": "这里空空如也！",
-    "linked pull requests": "链接的拉取请求",
+    "linked pull requests": "关联拉取请求",
     "submit new issue": "提交新议题",
     "new pull request": "创建拉取请求",
 
@@ -353,6 +358,7 @@
     "enabled": "启用",
     "disable": "停用",
     "add": "添加",
+    "added": "添加",
     "two-factor methods": "双重验证方式",
     "authenticator app": "身份验证器应用",
     "security keys": "安全密钥",
@@ -525,6 +531,7 @@
     "these repositories may be causing unnecessary notifications.": "这些存储库可能导致不必要的通知。",
     "unwatch all": "全部取消关注",
     "custom": "自定义",
+    "customize": "自定义",
     "ignoring": "忽略",
     "ignore": "忽略",
     "stop ignoring": "取消忽略",
