--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -160,8 +160,8 @@
     "organizations": "组织",
 
     "__comments-9": "Repository",
-    "star": "收藏",
-    "unstar": "取消收藏",
+    "star": "星标",
+    "unstar": "取消星标",
     "watch": "关注",
     "unwatch": "取消关注",
     "fork": "派生",
@@ -547,7 +547,7 @@
     "any language": "任意语言",
     "popular": "流行",
     "repositories options": "仓库选项",
-    "with this many stars": "有多少人收藏",
+    "with this many stars": "有多少星标",
     "with this many forks": "有多少派生",
     "of this size": "仓库大小",
     "pushed to": "推送于何时",
