词典: 增补拉取请求相关

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -245,6 +245,32 @@
     "participant": "参与者",
     "participants": "参与者",
     "close pull request": "关闭拉取请求",
+    "conversation": "对话",
+    "checks": "检查",
+    "view changes": "查看更改",
+    "outdated": "已过时",
+    "resolve conversation": "解决对话",
+    "unresolve conversation": "未解决对话",
+    "changes requested": "更改请求",
+    "change requested": "更改请求",
+    "show resolved": "显示已解决",
+    "hide resolved": "隐藏已解决",
+    "show all reviewers": "显示所有审核人",
+    "hide all reviewers": "隐藏所有审核人",
+    "reference in new issue": "引用到新议题",
+    "title": "标题",
+    "body": "内容",
+    "create issue": "创建议题",
+    "see review": "查看审核",
+    "re-request review": "重新请求审核",
+    "review changes": "审核更改",
+    "finish your review": "完成审核",
+    "submit general feedback without explicit approval.": "未批准，并提出一般性反馈意见。",
+    "approve": "批准",
+    "submit feedback approving these changes.": "批准，并提出反馈意见。",
+    "request changes": "请求更改",
+    "submit feedback suggesting changes.": "请求更改，并提出更改意见。",
+    "submit review": "提交审核",
 
     "__comments-issue": "Repository Issue",
     "new issue": "新议题",
@@ -500,6 +526,7 @@
     "__comments-16": "Notification",
     "inbox": "收件箱",
     "saved": "已保存",
+    "save": "保存",
     "done": "已完成",
     "unread": "未读",
     "filters": "过滤",
@@ -535,6 +562,7 @@
     "ignoring": "忽略",
     "ignore": "忽略",
     "stop ignoring": "取消忽略",
+    "back to notifications": "回到通知",
 
     "__comments-advanced-search": "Advanced search",
     "advanced search": "高级搜索",
