--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -109,7 +109,7 @@
     "your profile": "个人资料",
     "your repositories": "我的仓库",
     "your projects": "我的项目",
-    "your stars": "我收藏的仓库",
+    "your stars": "我标星的仓库",
     "your gists": "我的代码片段",
     "upgrade": "升级",
     "feature preview": "功能预览",
@@ -387,13 +387,13 @@
     "you choose who can see and commit to this repository.": "您可以选择谁可以看和提交到该仓库。",
 
     "__comments-13": "All Gist",
-    "starred gists": "我收藏的代码片段",
+    "starred gists": "我标星的代码片段",
     "search…": "搜索代码片段…",
     "back to github": "返回到 GitHub",
     "all gists": "所有片段",
     "forked": "派生",
-    "starred": "收藏",
-    "you don't have any starred gists yet.": "您还没有收藏任何片段。",
+    "starred": "星标",
+    "you don't have any starred gists yet.": "您还没有标星任何片段。",
     "your github profile": "我的 GitHub 个人资料",
     "view github profile": "查看 GitHub 个人资料",
     "last active": "最后活动于",
@@ -423,7 +423,7 @@
     "edit": "编辑",
     "delete": "删除",
     "revisions": "修订",
-    "stars": "收藏",
+    "stars": "星标",
     "forks": "派生",
     "raw": "源码",
     "revised": "修订",
