词典: 增补双因素验证登录相关

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -82,7 +82,7 @@
     "email": "电子邮箱",
     "password": "密码",
     "sign up for github": "注册 GitHub",
-    "sign in to gitHub": "登录 GitHub",
+    "sign in to github": "登录 GitHub",
     "username or email address": "用户名或邮箱",
     "forgot password?": "忘记密码?",
     "new to github?": "初次接触 GitHub？",
@@ -97,6 +97,43 @@
     "confirm password to continue": "确认密码以继续",
     "confirm password": "确认密码",
     "tip:": "提示:",
+    "signing in…": "登录中…",
+    "authentication code": "验证码",
+    "what’s this?": "这是什么？",
+    "verify": "验证",
+    "verifying": "验证中",
+    "verifying…": "验证中…",
+    "open the two-factor authentication app on your device to view your authentication code and verify your identity.": "打开设备上的两因素身份验证程序以查看身份验证码并验证您的身份。",
+    "having problems?": "有问题吗？",
+    "enter a two-factor recovery code": "输入恢复码",
+    "can’t access your two-factor device or valid recovery codes?": "无法访问您的双因素验证设备或有效的恢复码？",
+    "recovering your account": "恢复您的账户",
+    "if you can’t access a verified device or recovery codes you can request a reset of your authentication settings. for security reasons": "如果您无法访问已验证的设备或恢复码，您可以请求重置您的验证设置。出于安全考虑",
+    "this can take 3-5 business days": "这可能需要 3-5 个工作日",
+    "step 1": "第一步",
+    "verify an email associated with this account.": "验证与该账户相关的电子邮箱。",
+    "step 2": "第二步",
+    "verify a device, ssh key or personal access token.": "验证一个设备、SSH密钥或个人访问令牌。",
+    "step 3": "第三步",
+    "github support will review your request": "GitHub Support 将审核您的请求",
+    "within 3-5 business days": "在 3-5 个工作日内",
+    "i understand, get started": "我知道了，开始吧",
+    "two-factor authentication failed.": "双因素身份验证失败。",
+    "two-factor recovery": "双因素验证恢复",
+    "recovery code": "恢复码",
+    "you can enter one of your recovery codes in case you lost access to your mobile device.": "如果您无法访问移动设备，则可以输入恢复码。",
+    "still having problems?": "还是有问题？",
+    "recovery code authentication failed.": "恢复码身份验证失败。",
+    "account recovery": "账户恢复",
+    "first we need to verify an email address": "首先，我们需要验证一个电子邮箱地址",
+    "by sending a one-time password to all addresses associated with this account.": "用于通过向该帐户关联的所有地址发送一次性密码。",
+    "send one-time password": "发送一次性密码",
+    "skip this with recovery codes": "使用恢复码跳过此步骤",
+    "if you can locate your two-factor recovery codes you can skip this recovery process.": "如果你能找到你的双因素恢复码，你可以跳过这个恢复过程。",
+    "the file containing your recovery codes may exist on your computer - check  for a file named": "包含恢复码的文件可能存在于您的计算机上——请检查一个名为",
+    "enter recovery code": "输入恢复码",
+    "sign in to": "登录",
+    "to continue to": "继续登录",
 
     "__comments-6": "User home",
     "signed in as": "登录身份为",
@@ -380,13 +417,13 @@
     "new password": "新密码",
     "update password": "更新密码",
     "confirm new password": "确认新密码",
-    "two-factor authentication": "双重身份验证",
+    "two-factor authentication": "双因素身份验证",
     "enable": "启用",
     "enabled": "启用",
     "disable": "停用",
     "add": "添加",
     "added": "添加",
-    "two-factor methods": "双重验证方式",
+    "two-factor methods": "双因素验证方式",
     "authenticator app": "身份验证器应用",
     "security keys": "安全密钥",
     "sms number": "手机号码",
