--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -201,8 +201,8 @@
     "unstar": "取消星标",
     "watch": "关注",
     "unwatch": "取消关注",
-    "fork": "派生",
-    "unfork": "取消派生",
+    "fork": "复刻",
+    "unfork": "取消复刻",
     "new": "新建",
     "languages": "语言",
     "about": "关于",
@@ -259,14 +259,14 @@
     "open with github desktop": "用GitHub桌面客户端打开",
     "download zip": "下载Zip压缩包",
     "this repository": "该仓库",
-    "forked from": "派生自",
+    "forked from": "复刻自",
 
     "__comments-pull-request": "Repository pull request",
     "pull request": "拉取请求",
     "compare": "对比",
     "comparing changes": "差异比对",
     "choose two branches to see what’s changed or to start a new pull request. if you need to, you can also": "选择两个分支以比较差异或启动新的拉取请求。如果需要，你也可以",
-    "compare across forks": "跨派生比较",
+    "compare across forks": "跨复刻比较",
     "create pull request": "创建拉取请求",
     "comments": "评论",
     "files changed": "个文件已更改",
@@ -456,7 +456,7 @@
     "search…": "搜索代码片段…",
     "back to github": "返回到 GitHub",
     "all gists": "所有片段",
-    "forked": "派生",
+    "forked": "复刻",
     "starred": "星标",
     "you don't have any starred gists yet.": "您还没有标星任何片段。",
     "your github profile": "我的 GitHub 个人资料",
@@ -488,7 +488,7 @@
     "delete": "删除",
     "revisions": "修订",
     "stars": "星标",
-    "forks": "派生",
+    "forks": "复刻",
     "raw": "源码",
     "revised": "修订",
     "created": "创建",
@@ -615,7 +615,7 @@
     "popular": "流行",
     "repositories options": "仓库选项",
     "with this many stars": "有多少星标",
-    "with this many forks": "有多少派生",
+    "with this many forks": "有多少复刻",
     "of this size": "仓库大小",
     "pushed to": "推送于何时",
     "with this license": "用何种许可证",
