词典：零星修补

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -231,7 +231,7 @@
     "create new file": "新建文件",
     "upload files": "上传文件",
     "readme": "自述文件",
-    "commits": "次提交",
+    "commits": "提交",
     "merge pull request": "合并拉取请求",
     "switch branches/tags": "切换分支/标签",
     "default": "默认",
@@ -269,7 +269,7 @@
     "compare across forks": "跨复刻比较",
     "create pull request": "创建拉取请求",
     "comments": "评论",
-    "files changed": "个文件已更改",
+    "files changed": "文件变更",
     "allow edits by maintainers": "允许维护者进行编辑",
     "open a pull request": "打开一个拉取请求",
     "create a new pull request by comparing changes across two branches. if you need to, you can also": "通过比较两个分支之间的更改来创建新的拉取请求。如果需要，你也可以",
